--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        work_version = "2.5.0"
+    }
+
     repositories {
         google()
         mavenCentral()
